sparrow-engine/sparrow-engine-mobile/sparrow_engine.h

/**
 * Opaque engine handle. Consumers must not inspect or dereference.
 */
typedef void SparrowEngine;
/**
 * Opaque model handle returned by `sparrow_engine_load_model_by_id`.
 */
typedef void SparrowEngineModel;
/**
 * Detection bounding box, normalized `[0, 1]`.
 */
typedef struct SparrowEngineBBox {
  float x_min;
  float y_min;
  float x_max;
  float y_max;
} SparrowEngineBBox;
/**
 * One image detection.
 */
typedef struct SparrowEngineDetection {
  struct SparrowEngineBBox bbox;
  const char *label;
  uint32_t label_id;
  float confidence;
} SparrowEngineDetection;
/**
 * Image detection output. `yolo_e2e` image detection is available as of
 * RP-42; see `sparrow_engine_detect`.
 */
typedef struct SparrowEngineDetections {
  const struct SparrowEngineDetection *data;
  uintptr_t len;
  uint32_t image_width;
  uint32_t image_height;
} SparrowEngineDetections;
/**
 * Image detection options.
 */
typedef struct SparrowEngineDetectOpts {
  float confidence_threshold;
  uint32_t max_detections;
} SparrowEngineDetectOpts;
/**
 * Create an engine from a JSON config string: `{"model_dir": "...",
 * "intra_threads": 4}`. `intra_threads` is the LiteRT CPU thread count
 * (defaults to 4 — the Pi Zero 2W validated setting); `0` = LiteRT default.
 * Returns null on error; call `sparrow_engine_last_error` for details.
 *
 * # Safety
 * `config_json` must be a valid, non-null, null-terminated UTF-8 string.
 */
SparrowEngine *sparrow_engine_engine_new(const char *config_json);
/**
 * Free an engine. Null-safe. Each non-null engine must be freed exactly once.
 *
 * # Safety
 * `engine` must be a pointer returned by `sparrow_engine_engine_new`, or null.
 * Like every engine call, this must run on the thread that created the engine
 * (single-threaded contract — see the crate-level threading note); freeing from
 * another thread while the owner thread is mid-call is undefined behaviour.
 */
void sparrow_engine_engine_free(SparrowEngine *engine);
/**
 * Return the last error message for this thread, or null if none. The pointer
 * is valid until the next FFI call on the same thread; do not free it.
 *
 * # Safety
 * Thread-safe with respect to other threads' last-error state.
 */
const char *sparrow_engine_last_error(void);
/**
 * Load a model by catalog id. Returns null on error.
 *
 * # Safety
 * `engine` must be a valid engine pointer; `model_id` a valid C string.
 */
SparrowEngineModel *sparrow_engine_load_model_by_id(SparrowEngine *engine, const char *model_id);
/**
 * Unload the model this handle refers to and free the handle. Null-safe.
 *
 * # Safety
 * `model` must be a pointer returned by `sparrow_engine_load_model_by_id`, or
 * null, and freed exactly once. Must run on the engine's owner thread
 * (single-threaded contract — see the crate-level threading note).
 */
void sparrow_engine_unload_model(SparrowEngineModel *model);
/**
 * Run single-shot image detection over an encoded image buffer (JPEG/PNG).
 * Returns null on error; call `sparrow_engine_last_error` for details. Free the
 * result with `sparrow_engine_detections_free`.
 *
 * # Safety
 * `model` must be a valid model pointer; `image` must point to `len` readable
 * bytes; `opts` a valid pointer or null.
 */
struct SparrowEngineDetections *sparrow_engine_detect(const SparrowEngineModel *model,
                                                      const uint8_t *image,
                                                      uintptr_t len,
                                                      const struct SparrowEngineDetectOpts *opts);
/**
 * Free a detections result. Null-safe.
 *
 * # Safety
 * `ptr` must be a pointer returned by `sparrow_engine_detect`, or null.
 */
void sparrow_engine_detections_free(struct SparrowEngineDetections *ptr);